--- a/src/app/login.css
+++ b/src/app/login.css
@@ -1,7 +1,59 @@
+
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+  }
+
+.screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin: auto;
+  width: auto;
+  border-radius: 3px;
+  position: relative;	
+  height: 600px;
+  width: 360px;	
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.my-title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 30px;
+  }
+
+.my-input {
+  width: 100%;
+  padding: 10px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+  }
+
 .my-button {
-    background-color: blue;
+    background-color: rgb(83, 83, 224);
     color: white;
     padding: 10px;
+    margin-top: 1px;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
+  }
+
+/* Responsive form */
+.my-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 200px;
+  padding: 30px;
   }
