--- a/src/app/login.css
+++ b/src/app/login.css
@@ -1,10 +1,9 @@
-
 .container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
-  }
+}
 
 .screen {
   display: flex;
@@ -27,9 +26,10 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 30px;
-  }
+}
 
 .my-input {
+  outline: none;
   width: 100%;
   padding: 10px;
   margin-top: 1px;
@@ -37,7 +37,11 @@
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
-  }
+  transition: ease border 0.3s;
+}
+.my-input:focus{
+    border:solid 1px rgb(83, 83, 224);
+}
 
 .my-button {
     background-color: rgb(83, 83, 224);
@@ -46,14 +50,19 @@
     margin-top: 1px;
     border: none;
     border-radius: 3px;
+    cursor: pointer;
+    transition: ease background 0.3s;
   }
+.my-button:hover{
+  background: #4545bc;
+}
 
 /* Responsive form */
 .my-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
   width: 100%;
   max-width: 200px;
   padding: 30px;
-  }
+}
