--- a/src/app/friends.css
+++ b/src/app/friends.css
@@ -22,10 +22,11 @@
 .form-friends{
     background-color: rgb(83, 83, 224);
     color: #fff;
-    margin: 2%;
+    margin: 2% auto;
     text-align: center;
     padding: 10px;
-    width:100%;
+    width:90%;
+    min-width: 350px;
     box-sizing: border-box;
 }
 
@@ -64,12 +65,14 @@
 .user-list{
     background-color: rgb(255, 255, 255);
     color: #000000;
-    margin-top: 10px;
+    margin: 10px auto auto auto;
     text-align: justify;
     padding: 5%;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
+    width: 90%;
+    min-width: 350px;
 }
 .title-list{
     font-size: 30px;
